# gpib-utils

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  META  Makefile  Makefile.am  Makefile.in  NEWS  README.md  README.vxi  autogen.sh  bootstrap  configure  configure.ac  gpib-utils.spec  gpib-utils.spec.in
branches/garlick/gpib-utils/: gpib-utils.spec
branches/trunk-bak/gpib-utils/: ChangeLog
config/: aclocal.m4  config.h.in
etc/: Makefile.am  Makefile.in  gpib-utils.conf
examples/hp1630/: Makefile
examples/scripts/: filter.gp
foo/: README
foo/examples/hp1630/: dinotrace.ps
foo/htdocs/: Makefile
foo/man/: hptodino.1
foo/src/: dg535.h  hp3488.c  hp8656.h  hpcrc.h  r5005.c
gpib-utils/: ChangeLog  INSTALL
gpib-utils/examples/: Makefile  gpib.conf
gpib-utils/examples/hp3457/: Makefile  sample.gp
gpib-utils/htdocs/: Makefile  index.html
gpib-utils/man/: hp1630.1  hp3455.1  hp3488.1  hp8656.1  hptopbm.1  r5005.1
gpib-utils/src/: Makefile  ampl.c  dg535.h  errstr.h  gpib.c  gpib.h  hp1630.c  hp3457.c  hp3457.h  hp3488.c  hp3488.h  hp8656.c  hp8656.h  r5005.h  tek2230.c  units.c  util.c  util.h
htdocs/: Makefile  index.html  sfcopy  vxi.html
libics/: Makefile.am  Makefile.in  ics.c  ics.h  ics8000.x
libini/: Makefile.am
libinst/: Makefile.am  cmdline.c  cmdline.h  configfile.c  configfile.h  gpib.c  gpib.h  ib_488_2.c  ib_488_2.h  inst.c  inst.h
liblsd/: Makefile.am  Makefile.in  cbuf.c  cbuf.h  hostlist.c
libutil/: Makefile.am  argv.c  argv.h  hpcrc.c  hpcrc.h  hprintf.c  hprintf.h  util.c  util.h
libvxi11/: Makefile  Makefile.am  Makefile.in  rpccache.c  vxi11.h  vxi11.x  vxi11_core.c  vxi11_core.h  vxi11_device.c  vxi11_device.h  vxi11_ib.h  vxi11intr.x
libvxi11/test/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  2.c  3.c  4.c  5.c  6.c  7.c  9.c  Makefile  runtests  test.h
man/: Makefile  Makefile.am  Makefile.in  a34401.1.in  a6032.1.in  dg535.1.in  gpib-utils.conf.5.in  hp1630.1.in  hp3455.1  hp3457.1  hp3457.1.in  hp3488.1.in  hp6038.1.in  hp6626.1.in  hp6632.1.in  hp8656.1.in  hptodino.1.in  hptopbm.1.in  ibquery.1.in  ics8064.1  ics8064.1.in  ics8065.1  ics8065.1.in  icsconfig.1.in  sr620.1.in
src/: Makefile  Makefile.am  Makefile.in  a34401.c  a34401.h  a34410.c  a34410.h  a6032.c  argv.h  dg535.c  dg535.h  gpib.c  gpib.h  gpsh.c  hostlist.c  hostlist.h  hp1630.c  hp1650.c  hp3457.c  hp3488.c  hp3488.h  hp6038.c  hp603x.c  hp6626.c  hp6632.c  hp8656.c  hprintf.c  hptodino.c  hptopbm.c  ibquery.c  ics.c  ics.h  ics8000.x  ics8064.c  ics8065.c  icsconfig.c  sr620.c  sr620.h  util.c  util.h  (+2 more)
tags/gpib-utils-1-0/gpib-utils/: ChangeLog  Makefile  README
tags/gpib-utils-1-1/gpib-utils/: META  Makefile  README
tags/gpib-utils-1-2/gpib-utils/: META  gpib-utils.spec
tags/gpib-utils-1-3/: META  Makefile
tags/gpib-utils-1-3-pre1/: ChangeLog  INSTALL  Makefile  gpib-utils.spec
tags/gpib-utils-1-3-pre1/etc/: gpib-utils.conf
tags/gpib-utils-1-3-pre1/htdocs/: index.html
tags/gpib-utils-1-3-pre1/man/: hp1630.1  hp3455.1  hp3488.1  hp8656.1
tags/gpib-utils-1-3-pre1/src/: dg535.c  gpib.c  gpib.h  gpsh.c  hp1630.c  hp603x.c  hp662x.h  hpcrc.c  r5005.c  sr620.c  sr620.h  units.c
tags/gpib-utils-1-3/htdocs/: index.html
tags/gpib-utils-1-3/man/: hp1630.1  ics8065.1
tags/gpib-utils-1-3/src/: Makefile  a6032.h  dg535.c  gpib.c  hp1630.h
tags/gpib-utils-1-4/: ChangeLog  Makefile.in  configure
tags/gpib-utils-1-4/config/: aclocal.m4  config.h.in
tags/gpib-utils-1.3/: gpib-utils.spec
tags/gpib-utils-1.3-libvxi11-try1/: ChangeLog  NEWS  gpib-utils.spec
tags/gpib-utils-1.4/: ChangeLog  META  Makefile.in  configure  configure.ac  gpib-utils.spec
tags/gpib-utils-1.5-pre1/: AUTHORS  NEWS
tags/gpib-utils-1.5-pre2/: ChangeLog  Makefile.am  gpib-utils.spec
test/: Makefile.in  thello.c
trunk/: AUTHORS  ChangeLog  META  Makefile  Makefile.am  Makefile.in  NEWS  README  README.gpib  README.vxi  autogen.sh  bootstrap  configure  configure.ac  gpib-utils.spec  gpib-utils.spec.in
trunk/config/: ac_linux_gpib.m4  aclocal.m4  config.h.in
trunk/etc/: Makefile.in  gpib-utils.conf  gpib.conf
trunk/examples/hp1630/: Makefile  all.dump  state.dino
trunk/examples/hp3457/: Makefile  sample.gp
trunk/examples/scripts/: Makefile
trunk/gpib-utils/: ChangeLog  INSTALL  META  gpib-utils.spec
trunk/gpib-utils/examples/: gpib.conf
trunk/gpib-utils/examples/hp1630/: timing.dump
trunk/gpib-utils/examples/hp3457/: sample.gp
trunk/gpib-utils/examples/scripts/: filter.gp
trunk/gpib-utils/htdocs/: Makefile
trunk/gpib-utils/man/: Makefile  hp1630.1  hp3457.1  hptodino.1  hptopbm.1  r5005.1
trunk/gpib-utils/src/: Makefile  ampl.c  dg535.c  dg535.h  errstr.h  freq.c  gpib.c  hp1630.c  hp3455.c  hp3455.h  hp3457.c  hp3457.h  hp3488.c  hp8656.c  hp8656.h  hpcrc.c  hpcrc.h  hptodino.c  r5005.c  r5005.h  sr620.c  units.h
trunk/htdocs/: Makefile  hp1630_example.html  index.html  linux-gpib.html  supported.html  vxi.dia  vxi.html
trunk/libics/: Makefile  Makefile.am  Makefile.in  ics.h  ics8000.x
trunk/liblsd/: Makefile.in  argv.c
trunk/libvxi11/: Makefile  Makefile.am  Makefile.in  libvxi11.pc.in  rpccache.c  rpccache.h  vxi11.c  vxi11.h  vxi11.x  vxi11_core.c  vxi11_core.h  vxi11_device.c  vxi11_device.h  vxi11_ib.c
trunk/libvxi11/test/: 1.c  10.c  11.c  13.c  14.c  16.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  Makefile  runtests  test.h
trunk/man/: Makefile.am  Makefile.in  a34401.1.in  a6032.1.in  dg535.1  dg535.1.in  gpib.conf.5.in  hp1630.1.in  hp3488.1  hp6038.1.in  hp6626.1.in  hp6632.1  hp6632.1.in  hp8656.1  hp8656.1.in  ics8064.1.in  icsconfig.1.in  r5005.1
trunk/src/: Makefile  Makefile.am  Makefile.in  a34401.c  a6032.c  argv.c  dg535.c  dg535.h  gpib.c  gpib.h  hp1630.c  hp1630.h  hp1650.c  hp3455.c  hp3455.h  hp3457.c  hp3488.c  hp6038.c  hp6626.c  hp6632.c  hp8656.c  hpcrc.c  hptodino.c  hptopbm.c  ibquery.c  ics.c  ics.h  ics8000.x  ics8064.c  ics8065.c  r5005.c  sr620.c  sr620.h  util.c  util.h  vxi11.x  vxi11lib.h  vxi11srq.x
trunk/test/: Makefile.am  Makefile.in
(+151 files in other folders)
