man1_MANS = \
	a34401.1 \
	a6032.1 \
	dg535.1 \
	hp1630.1 \
	hp3457.1 \
	hp3488.1 \
	hp6632.1 \
	hp8656.1 \
	hptodino.1 \
	hptopbm.1 \
	ics8064.1 \
	ics8065.1 \
	sr620.1

man5_MANS = \
	gpib.conf.5

EXTRA_DIST = \
	a34401.1 \
	a6032.1 \
	dg535.1 \
	hp1630.1 \
	hp3457.1 \
	hp3488.1 \
	hp6632.1 \
	hp8656.1 \
	hptodino.1 \
	hptopbm.1 \
	ics8064.1 \
	ics8065.1 \
	sr620.1
